--- a/paquescolar-web/src/main/webapp/app/reg08HabilitarProCredito.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg08HabilitarProCredito.xhtml
@@ -17,7 +17,7 @@
                         <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
 
                         <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
+                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
                         </f:facet>  
                     </p:menubar>
                     <div class="ui-g-12 ui-md-6 ui-lg-6">
