--- a/paquescolar-web/src/main/webapp/app/reg08Usuario.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg08Usuario.xhtml
@@ -25,7 +25,7 @@
                         <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
                         <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined" />
                         <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
+                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
                         </f:facet>  
                     </p:menubar>
 
